--- a/user/index.html
+++ b/user/index.html
@@ -19,6 +19,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POS Dashboard</title>
     <link rel="stylesheet" href="index.css">
+    <style>
+        .logout-btn {
+        padding: 7.5px 15px;
+        background-color: #dc3545;
+        color: white;
+        font-size: 13px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 7px;
+        transition: background-color 0.3s ease;
+    }
+
+    .logout-btn:hover {
+        background-color: #c82333;
+    }
+    </style>
 
 </head>
 
@@ -40,6 +57,8 @@
               </ul>
               <!-- Admin Button -->
               <button id="admin-btn" class="btn btn-outline-danger">Admin</button>
+              <!-- logout button -->
+              <button class="logout-btn" onclick="logout()">Logout</button>
             </div>
           </div>
         </nav>
@@ -274,6 +293,12 @@ document.addEventListener('DOMContentLoaded', () => {
       alert("Incorrect password.");
     }
   });
+</script>
+<script>
+    function logout() {
+        // Redirect back to login page
+        window.location.href = 'login.html'; // Replace 'login.html' with the actual login page file name if different
+    }
 </script>
 </body>
 </html>
